# Termibbl

./: Cargo.toml  README.md  default.nix  foo  words_example
src/: app.rs  data.rs  encoding.rs  events.rs  main.rs  message.rs  server.rs  ui.rs  utils.rs
src/client/: app.rs  app_server.rs  error.rs  mod.rs  ui.rs
src/server/: cli.rs  mod.rs  room.rs  server.rs  session.rs  skribbl.rs  words_dump
