[package]
name = "termibbl"
version = "0.1.0"
authors = ["Leon Kowarschick <lkowarschick@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.17", features = ["event-stream"] }
tui = { version = "0.9", default-features = false, features = ['crossterm'] }
line_drawing = "0.8.0"
tokio-tungstenite = "0.10.1"
serde = { version = "1.0.111", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["full"] }
