[package]
name = "termibbl"
version = "0.1.0"
authors = ["Leon Kowarschick <lkowarschick@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.17", features = ["event-stream"] }
tui = { version = "0.9", default-features = false, features = ['crossterm'] }
line_drawing = "0.8.0"
tungstenite = "0.10.1"
tokio-tungstenite = "0.10.1"
serde = { version = "1.0.111", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["full"] }
futures-util = { version = "0.3", default-features = false, features = ["async-await", "sink", "std"] }
structopt = { version = "0.3" }
rand = "0.7"
futures-timer = "3.0"
reqwest = "0.10"
log = "0.4.11"
pretty_env_logger = "0.4.0"


[profile.release]
lto = true
