[package]
name = "termibbl"
version = "0.1.0"
authors = ["Leon Kowarschick <lkowarschick@gmail.com>"]
edition = "2018"

[dependencies]
crossterm = { version = "0.19", features = ["event-stream"] }
tui = { version = "0.14", default-features = false, features = ['crossterm'] }
line_drawing = "0.8.0"
bincode = "1.3.1"
bytes = "0.5.0"
byteorder = "1.4.2"
serde = { version = "1.0.111", features = ["derive"] }
tokio = { version = "0.2", features = ["full"] }
tokio-util = { version = "0.3", features = ["codec"] }
futures-util = { version = "0.3", features = ["async-await-macro", "sink"] }
rand = "0.7"
reqwest = "0.10"
log = "0.4"
pretty_env_logger = "0.4.0"
argh = "0.1.4"
thiserror = "1.0.24"
flume = "0.10.2"

[profile.release]
lto = true
